@@ -1,6 +1,6 @@
 Metadata-Version: 1.1
 Name: lsl
-Version: 0.6.dev-r1049
+Version: 0.7.dev-r1064
 Summary: LWA Software Library
 Home-page: http://fornax.phys.unm.edu/lwa/trac/
 Author: Jayce Dowell
