@@ -1,5 +1,6 @@
 0.7.0
   * Added in LWA Development Primitives module (lsl.reader.ldp)
+  * Added a function to lsl.misc.beamformer to convert X and Y linear pols. to circular L and R pols.
 
 0.6.1
   * Added support for DROS metatags in the SESSION_SPC SDF keyword
